manifests/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    homelab.techtronics.top/rollback-jellyfin-image: "lscr.io/linuxserver/jellyfin@sha256:ed5dc797d12089271e0e61a740cbf9626c4e513400ca2d96c54d35500eeb907c"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
      annotations:
        homelab.techtronics.top/restarted-at: "2026-07-03T21:24:55Z"
    spec:
      securityContext:
        supplementalGroups:
          - 44   # video
          - 993  # render

      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin@sha256:96d21c396f46f10578931c2941e3f2789f7087b5ab0e166afedf29e7385c6aa7  # 10.11.11
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8096
        startupProbe:
          httpGet:
            path: /health
            port: 8096
            scheme: HTTP
          periodSeconds: 10
          failureThreshold: 150
        readinessProbe:
          httpGet:
            path: /health
            port: 8096
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 4
        livenessProbe:
          httpGet:
            path: /health
            port: 8096
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 4
        volumeMounts:
        - name: config
          mountPath: /config
        - name: cache
          mountPath: /cache
        - name: media2-media
          mountPath: /media_2
          readOnly: false
          mountPropagation: HostToContainer
        resources:
          limits:
            gpu.intel.com/xe: '1'

      - name: meilisearch
        image: getmeili/meilisearch:v1.53.1@sha256:8d6643d86d71fad6ad3cba92cde7ccfce9e4d6c384bda67598eb553571c32431 # v1.53.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: meili-http
          containerPort: 7700
        volumeMounts:
        - name: meilisearch-data
          mountPath: /meili_data
        readinessProbe:
          httpGet:
            path: /health
            port: 7700
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /health
            port: 7700
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 5
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 6

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: meilisearch-data
        persistentVolumeClaim:
          claimName: meilisearch-data
      - name: cache
        persistentVolumeClaim:
          claimName: jellyfin-cache
      - name: media2-media
        hostPath:
          path: /mnt/merged/media
          type: Directory
